# Test

./: .env.example  .gitignore  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  config.py  jira_client.py
tests/: __init__.py  test_jira_client.py
